# be/app.js
@@ -15,6 +15,7 @@ import indexRouter from './routes/index.js';
 import usersRouter from './routes/users.js';
 import authRouter from './routes/auth.js';
 import commentRouter from './routes/comments.js';
+import shopRouter from './routes/shops.js';
 
 const app = express();
 const port = environment.port;
@@ -56,6 +57,7 @@ app.use('/', indexRouter);
 app.use('/api/users', usersRouter);
 app.use('/api/auth', authRouter);
 app.use('/api/comment', commentRouter);
+app.use('/api/shops', shopRouter);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Get raw Swagger JSON
